34) kernel: tcp: remove bad timeout logic in fast recovery.<br>
35) kernel: tcp: be more strict before accepting ECN negociation.<br>
36) kernel: tcp: RFC6298 supersedes RFC2988bis.<br>
37) kernel: tcp: Increase timeout for SYN segments.<br>
38) kernel: tcp: ecn: dont delay ACKS after CE.<br>
39) kernel: tcp: Remove redundant code entering quickack mode.<br>
40) kernel: ipv4: gso: send_check() & segment() cleanups.<br>
41) kernel: ipv6: fix 'inet6_rtm_getroute' to release 'rt->dst' in case of 'alloc_skb' failure.<br>
42) kernel: ipv6: gso: remove redundant locking.<br>
43) kernel: netfilter: cttimeout: fix buffer overflow.<br>
44) kernel: netfilter: nf_conntrack: add nf_ct_timeout_lookup.<br>
<br>
<br>
<b>2.1.x</b><br>
1) toolchain: update kernel headers and sync gcc with upstream.<br>
2) uboot: update to last version.<br>
3) reg tool: small fixup.<br>
4) mii tool: fixup and add 7628 support.<br>
5) gpio tool: fix 9532 mode support.<br>
6) nvram lib: do not direct read from flash at show.<br>
7) nvram tool: fix generate wifi config.<br>
8) switch tool: add igmp snooping managment.<br>
9) hw_nat: FoE entry range check, entry valid check.<br>
10) init.d: more enchange esw/vlan config logic.<br>
11) kernel: ralink_spi: add N25Q256A and MT25QL512AB support.<br>
12) kernel: ralink spi: fix write after unprotect bits clear, fix Winbond quad mode.<br>
13) kernel: ralink_gpio: switch to schedule_work.<br>
14) kernel: ralink_gpio: fix 9532 mode support.<br>
15) kernel: raeth: add 802.3az EEE control for MT7620 ESW, disable EEE by default for all PHY.<br>
16) kernel: ralink ehci: add workaround for embedded synopsys host controller.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) add support dualstack ipv6/4 with dhcp v6/ra/6rd uplink support (need more info from ISP).<br>
3) full russian ui (need help community or employ the web developer).<br>
<br>
<br>
<br>